--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]==1.0.0a
+git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
 aiohttp
